# idml-xhtml-docx-epub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt  run.py
filters/: fix_endnotes.lua  fix_links_epub.lua  footnote_filter.lua
scripts/: build_structure.py  docx_to_epub.py  enrich_epub.py  epub_to_html.py  preflight.py  process_footnotes.py  process_images.py  rtf_to_xhtml.py  xhtml_to_docx.py
scripts/indesign/: export_fxl.jsx  export_xhtml.jsx  export_xhtml_v2.jsx  indesign_utils.jsx
scripts/utils/: __init__.py  file_utils.py
templates/: custom-reference.docx  styles.css  template.opf
tests/: smoke_test.py  test_units.py
